--- a/index.html
+++ b/index.html
@@ -50,11 +50,6 @@
             </form>
         </div>
     </section>
-    <section><h1>RUN BUDDY</h1></section>
-    <section><h2>Whta We Do</h2></section>
-    <section><h2>What You Do</h2></section>
-    <section><h2>Meet The Trainers</h2></section>
-    <section><h2>Reach Out</h2></section>
     <footer>
         <h2>Made with love by Run Buddy</h2>
         <div>
@@ -62,8 +57,8 @@
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
-    <section id="what-we-do">
-        <h2>What We Do</h2>
+    <section id="what-we-do" class="intro">
+        <h2 class="section-title primary-border">What We Do</h2>
         <p>
             butcher selfies chambray shabby chic gentrify readymade yr Echo Park 
             XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably 
@@ -72,27 +67,84 @@
             flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
         </p>
     </section>
-    <section id="what-you-do">
-        <h2>What You Do</h2>
+    <section id="what-you-do" class="steps">
+        <h2 class="section-title seccondary-border">What You Do</h2>
         <div>
-            <img src="./img steps/step-1.svg">
-            <h3>step 1:Fill out the form Above.</h3>
+            <img src="./img/img steps/step-1.svg">
+            <h3><span>step 1:Fill out the form Above.</span> </h3>
             <p>you're aready here, si wy not?</p>
         </div>
         <div>
-            <img src="./img steps/step-2.svg">
-            <h3>step 2: Consult eith one of our Trainers.</h3>
+            <img src="./img/img steps/step-2.svg">
+            <h3><span>step 2: Consult eith one of our Trainers.</span></h3>
             <p>Are you here to build muscle, lose weight, or just feel goo?</p>
         </div>
         <div>
-            <img src="./img steps/step-3.svg">
-            <h3>step 3: Get Running.</h3>
+            <img src="./img/img steps/step-3.svg">
+            <h3><span>step 3: Get Running.</span></h3>
            <p>Hit the ground running (literally) once your tainer lays out your plan</p> 
         </div>
         <div>
-            <img src="./img steps/step-4.svg">
-            <h3>step 4: see results.</h3>
+            <img src="./img/img steps/step-4.svg">
+            <h3><span>step 4: see results.</span></h3>
             <p>Bi-weekly checkins eith your trainer will keep you focused</p>
+        </div>
+    </section>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">meet the trainers</h2>
+        <article class="trainer">
+            <img src="./img/img trainers/trainer-1.jpg" alt="aron stephnes in his workout clothes, ready to pump iron">
+            <div class="trainer-bio text-left">
+                <h3>Arron stephens</h3>
+                <h4>speed / strength </h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+            </div>
+        </article>
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>joanna gill</h3>
+                <h4>endurance</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+            </div>
+                <img src="./img/img trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+        </article>
+        <article class="trainer">
+            <img src="./img/img trainers/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+              <h3>Harry "the Headband" Smith</h3>
+              <h4>Strength</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+              </p>
+            </div>
+          </article>
+    </section>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title seccondary-border">Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3317.5161095519256!2d-116.90195695412112!3d33.74732674694375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80db6e972de15209%3A0x1cff08821c075c59!2sCarl&#39;s%20Jr.!5e0!3m2!1sen!2sus!4v1634960878553!5m2!1sen!2sus" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+            </iframe>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    any questions or concerns befor sining up?
+                    <br/>
+                    let us know and well be happy to talk to you!
+                </p>    
+                <address>
+                    55 main street <br/>
+                    some town, ca <br/>
+                    123456 <br/>
+                    P: 555.RUN.BuDZ(555,5555,555)
+                    E: <a href="mailto:info@runbuddy.io">information.io</a>
+                </address>
+            </div>
         </div>
     </section>
 </body>
